LogConfigurationTest intermittently fails on AArch64

XMLWordPrintable

    • b23

        Create on behalf of gaodan<gaodan.gao@alibaba-inc.com>
        ---

        The following tests intermittently fail on AArch64:

        TEST_VM_F(LogConfigurationTest, reconfigure_decorators)
        TEST_VM_F(LogConfigurationTest, reconfigure_decorators_MT)

        ---
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGBUS (0x7) at pc=0x0000000000000021, pid=1762387, tid=1762473
        #
        # JRE version: OpenJDK Runtime Environment (21.0) (build 21-internal-adhoc.yansendao.jdk)
        # Java VM: OpenJDK 64-Bit Server VM (21-internal-adhoc.yansendao.jdk, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
        # Problematic frame:
        # V [libjvm.so+0xcbf050] LogTagSet::vwrite(LogLevel::type, char const*, std::__va_list)+0x300
        #
        # Core dump will be written. Default location: /cloud/data/corefile/core-%e-1762387-%t-%h
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -XX:+ExecutingUnitTests

        Host: AArch64, 96 cores, 755G, Anolis OS release 8.8
        Time: Mon Apr 10 12:08:22 2023 CST elapsed time: 0.474275 seconds (0d 0h 0m 0s)

        --------------- T H R E A D ---------------

        Current thread (0x0000aaaadbf6b310): JavaThread "JavaTestThread" daemon [_thread_in_vm, id=1762473, stack(0x0000ffff44cde000,0x0000ffff44ede000)]

        Stack: [0x0000ffff44cde000,0x0000ffff44ede000], sp=0x0000ffff44edc380, free space=2040k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xcbf050] LogTagSet::vwrite(LogLevel::type, char const*, std::__va_list)+0x300 (logTagSet.cpp:83)
        V [libjvm.so+0x3be264] void LogImpl<(LogTag::type)69, (LogTag::type)0, (LogTag::type)0, (LogTag::type)0, (LogTag::type)0, (LogTag::type)0>::write<(LogLevel::type)2>(char const*, ...)+0x84 (log.hpp:148)
        V [libjvm.so+0x4a2a94] UnitTestThread::main_run()+0x6c (test_logConfiguration.cpp:238)
        V [libjvm.so+0x418c6c] JavaTestThread::test_thread_entry(JavaThread*, JavaThread*)+0x1c (threadHelper.inline.hpp:118)
        V [libjvm.so+0xabc738] JavaThread::thread_main_inner()+0x178 (javaThread.cpp:717)
        V [libjvm.so+0x1002e4c] Thread::call_run()+0xa4 (thread.cpp:224)
        V [libjvm.so+0xdf6e24] thread_native_entry(Thread*)+0xdc (os_linux.cpp:740)
        C [libpthread.so.0+0x78b8] start_thread+0x188

        siginfo: si_signo: 7 (SIGBUS), si_code: 1 (BUS_ADRALN), si_addr: 0x0000000000000021

        Registers:
        R0=0x0000aaaadbc33cd0
        R1=0x0000ffff44edc438
        R2=0x0000ffff44edc468
        R3=0x0000000000000021
        R4=0x00000000000000c0
        R5=0x0000fffef4000ce0
        R6=0x000000000000000a
        R7=0x000000000000000a
        R8=0x0000000000000040
        R9=0xffffff80ffffffd0
        R10=0x0000000000000001
        R11=0x0000ffff44edc088
        R12=0x696d652030206574
        R13=0x676f6c2061207374
        R14=0x0000000000000000
        R15=0x00003017fe000000
        R16=0x0000000000000001
        R17=0x0000ffff9a520b70
        R18=0x00000000000007e9
        R19=0x0000ffff44edc438
        R20=0x0000ffff9be80ca8
        R21=0x0000aaaadbf6b080
        R22=0x0000ffff44edc468
        R23=0x0000ffff9be4e000
        R24=0x0000ffff9be80cd0
        R25=0x0000000000000002
        R26=0x0000ffff44edc3f0
        R27=0x0000ffff9be80d08
        R28=0x00000000000003d8
        R29=0x0000ffff44edc380
        R30=0x0000ffff9b48f054


        Register to memory mapping:

        R0 =0x0000aaaadbc33cd0 points into unknown readable memory: 0x0000aaaadbc33d10 | 10 3d c3 db aa aa 00 00
        R1 =0x0000ffff44edc438 is pointing into the stack for thread: 0x0000aaaadbf6b310
        R2 =0x0000ffff44edc468 is pointing into the stack for thread: 0x0000aaaadbf6b310
        R3 =0x0000000000000021 is an unknown value
        R4 =0x00000000000000c0 is an unknown value
        R5 =0x0000fffef4000ce0 points into unknown readable memory: 0x6e65727275636e6f | 6f 6e 63 75 72 72 65 6e
        R6 =0x000000000000000a is an unknown value
        R7 =0x000000000000000a is an unknown value
        R8 =0x0000000000000040 is an unknown value
        R9 =0xffffff80ffffffd0 is an unknown value
        R10=0x0000000000000001 is an unknown value
        R11=0x0000ffff44edc088 is pointing into the stack for thread: 0x0000aaaadbf6b310
        R12=0x696d652030206574 is an unknown value
        R13=0x676f6c2061207374 is an unknown value
        R14=0x0 is nullptr
        R15=0x00003017fe000000 is an unknown value
        R16=0x0000000000000001 is an unknown value
        R17=0x0000ffff9a520b70: sem_post+0x0000000000000000 in /lib64/libpthread.so.0 at 0x0000ffff9a510000
        R18=0x00000000000007e9 is an unknown value
        R19=0x0000ffff44edc438 is pointing into the stack for thread: 0x0000aaaadbf6b310
        R20=0x0000ffff9be80ca8: <offset 0x00000000016b0ca8> in /home/yansendao/git/jdk/build/linux-aarch64-server-release/images/test/hotspot/gtest/server/libjvm.so at 0x0000ffff9a7d0000
        R21=0x0000aaaadbf6b080 points into unknown readable memory: 0x0000aaaadbf6b0c0 | c0 b0 f6 db aa aa 00 00
        R22=0x0000ffff44edc468 is pointing into the stack for thread: 0x0000aaaadbf6b310
        R23=0x0000ffff9be4e000: <offset 0x000000000167e000> in /home/yansendao/git/jdk/build/linux-aarch64-server-release/images/test/hotspot/gtest/server/libjvm.so at 0x0000ffff9a7d0000
        R24=0x0000ffff9be80cd0: <offset 0x00000000016b0cd0> in /home/yansendao/git/jdk/build/linux-aarch64-server-release/images/test/hotspot/gtest/server/libjvm.so at 0x0000ffff9a7d0000
        R25=0x0000000000000002 is an unknown value
        R26=0x0000ffff44edc3f0 is pointing into the stack for thread: 0x0000aaaadbf6b310
        R27=0x0000ffff9be80d08: <offset 0x00000000016b0d08> in /home/yansendao/git/jdk/build/linux-aarch64-server-release/images/test/hotspot/gtest/server/libjvm.so at 0x0000ffff9a7d0000
        R28=0x00000000000003d8 is an unknown value
        R29=0x0000ffff44edc380 is pointing into the stack for thread: 0x0000aaaadbf6b310
        R30=0x0000ffff9b48f054: <offset 0x0000000000cbf054> in /home/yansendao/git/jdk/build/linux-aarch64-server-release/images/test/hotspot/gtest/server/libjvm.so at 0x0000ffff9a7d0000



              Assignee:
              Yi Yang
              Reporter:
              Yi Yang
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: