8305819: LogConfigurationTest intermittently fails on AArch64